cabal-version:       >=1.10

name:                crx-dl
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
--license-file:        LICENSE
author:              Ville-Markus Yli-Suutala
maintainer:          3628916+VeeEM@users.noreply.github.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable crx-dl
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
                     , http-client
                     , http-client-tls
                     , http-types
                     , bytestring
  -- hs-source-dirs:
  default-language:    Haskell2010
